--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -3,6 +3,7 @@
 ; db configuration
 [db]
 uri       = sqlite://storage.sqlite
+uri2       = sqlite://storage2.sqlite
 migrate   = 1
 pool_size = 1
 
